# api-rust-roguemarket

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile.api  Dockerfile.worker  Dockerfile.worker-js  docker-compose.yaml.sample  readme.md
.github/workflows/: build-api.yml  build-substream.yml  build-worker-js.yml  build-worker.yml  main.yml
api/: Cargo.toml  rust-toolchain.toml
api/src/: helper.rs  main.rs
api/src/endpoints/: mod.rs  todo.rs
api/src/endpoints/default/: default.rs
api/src/endpoints/responses/: mod.rs  response_error.rs  response_trade.rs
api/src/endpoints/stats/: mod.rs  stats.rs  stats_error.rs
api/src/endpoints/trades/: helper.rs  mod.rs  trades.rs  trades_t.rs
api/src/endpoints/udf/: helper.rs  mod.rs  udf.rs  udf_config_t.rs  udf_error_t.rs  udf_history_t.rs  udf_search_t.rs  udf_symbolInfo_t.rs  udf_symbol_info_t.rs  udf_symbols_t.rs
api/src/endpoints/volume/: mod.rs  volume.rs
libs/database_psql/: .env  Cargo.toml  readme.md  run.sh
libs/database_psql/migrations/2023-03-12-180046_create_cursors/: down.sql  up.sql
libs/database_psql/migrations/2023-03-12-180050_create_trades/: down.sql  up.sql
libs/database_psql/src/: connection.rs  db_cursors.rs  db_trades.rs  lib.rs  model.rs  schema.rs
libs/helper/: Cargo.toml
libs/helper/src/: filehelper.rs  lib.rs
libs/metadata_gateway/: Cargo.toml
libs/metadata_gateway/src/: lib.rs  test.rs
libs/mongo/: Cargo.toml
libs/mongo/src/: agg_address.rs  agg_get_last_or_first.rs  agg_history.rs  agg_history_countback.rs  agg_mint.rs  agg_next.rs  agg_signature.rs  agg_symbol.rs  lib.rs  mongodb.rs
libs/solana_tools/: Cargo.toml
libs/solana_tools/src/fetcher/: fetcher.rs
libs/solana_tools/tests/: fetcher_test.rs
libs/solana_tools/tests/samples/: signatures.sample.json  transactions-filtered-single.sample.json  transactions.sample.json
libs/solana_tools/tests/samples/input/: sig_002.in.sample.json  sig_003.in.sample.json  sig_004.in.sample.json  sig_failed.in.sample.json  sig_list.in.sample.json  store.sample.json  transactions-filtered.in.sample.json
libs/solana_tools/tests/samples/output/: db_001.out.sample.json  db_002.out.sample.json  db_004.out.sample.json  transactions-filtered.out.sample.json
libs/staratlas/: Cargo.toml
libs/staratlas/src/: lib.rs  staratlasnft.rs  symbolstore.rs
libs/staratlas/tests/: store.sample.json  store_test.rs
libs/staratlas_gm/: idl.json  readme.md
libs/staratlas_gm/marketplace_interface/: Cargo.toml
libs/staratlas_gm/marketplace_interface/src/: accounts.rs  errors.rs  instructions.rs  lib.rs  typedefs.rs
libs/staratlas_nft/: Cargo.toml
libs/staratlas_nft/src/: lib.rs  staratlasnft.rs
libs/staratlas_symbols/: Cargo.toml
libs/staratlas_symbols/src/: lib.rs  symbol_store.rs  symbol_store_kv.rs
libs/types/: Cargo.toml
libs/types/src/: databasetrade.rs  lib.rs  m_ohclvt.rs  tokentransafer.rs  trade_t.rs
libs/udf/: Cargo.toml
libs/udf/src/: lib.rs  time_convert.rs
libs/udf/tests/: time_convert_test.rs  time_convert_timestamp.rs
libs/utopia_temp/utoipa/: README.md
libs/utopia_temp/utoipa/src/: openapi.rs
substream-mongodb/: Cargo.toml  start.sh  substreams.spkg
substream-mongodb/src/: main.rs  mongodb.rs  substreams_stream.rs  trade_t.rs
substream-psql/: .env  Cargo.toml  README.md  build.rs  docker-compose.yaml  substreams.spkg
substream-psql/src/: helper.rs  main.rs  main_old.rs  mongodb.rs  substreams.rs  substreams_stream.rs
substream-psql/src/pb/: mod.rs  pb.rs  sa.trade.v1.rs  sf.substreams.rpc.v2.tonic.rs  sf.substreams.sink.database.v1.rs  sf.substreams.v1.rs
substream-psql/src/tests/: base.rs  mod.rs  test_map01.rs
substream-sa/: Cargo.toml  Makefile  Readme.md  readme.md  substreams.spkg  substreams.yaml
substream-sa/proto/: staratlas_instruction.proto
substream-sa/psql/: schema.sql
substream-sa/src/: help.rs  lib.rs  sa_instruction.rs
substream-sa/src/pb/: mod.rs  sa.trade.v1.rs  sf.substreams.v1.rs  substreams.database.v1.rs
worker/: .env.sample  Cargo.toml  recipe.json
worker-js/: package.json  tsconfig.json
worker-js/src/: index.ts  readme.md  sleeper.ts
worker-js/src/interfaces/: Currency.ts  ParsedInstruction.ts  StarAtlasAPI.ts  Symbol.ts
worker-js/src/mongodb/: mongodbconnection.ts
worker-js/src/store/: LocalStoreAdapter.ts
worker-js/src/types/: DBObjects.ts
worker/src/: emotes.rs  main.rs  task.rs
