[package]
name = "RogueMarketAPI"
description = "This API is used by the RogueMarket to display charts and data"
version = "0.2.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9.0"
log = "0.4"
futures = "0.3"
#utoipa = "2.2.0"
utoipa = {path = "../libs/utopia_temp/utoipa" }
staratlas = { path = "../libs/staratlas" }
types = { path = "../libs/types" }
udf = { path = "../libs/udf" }
mongodb = "2.3.0"
mongo = { path = "../libs/mongo" }
utoipa-swagger-ui = "2.0.1"
chrono = "0.4.22"
