[package]
name = "RogueMarketAPI"
description = "This API is used by the RogueMarket to display charts and data"
version = "0.3.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10.0"
log = "0.4"
futures = "0.3"
#utoipa = "2.2.0"
utoipa = { version = "3.1.1", features = ["chrono"] }
#utoipa = { path = "../libs/utopia_temp/utoipa" }
staratlas = { path = "../libs/staratlas" }
database_psql = { path = "../libs/database_psql" }
types = { path = "../libs/types" }
udf = { path = "../libs/udf" }
postgres = { version = "0.19.4", features = ["with-chrono-0_4"] }
r2d2_postgres = "0.18.1"
utoipa-swagger-ui = "3.1.1"
chrono = "0.4.22"
diesel = { version = "2.0.3", features = ["postgres", "r2d2"] }
deadpool-postgres = "0.10.5"