[package]
name = "substreams-mongo-test"
version = "0.0.1"
description = "Testing mongoDB substream mapping"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
prost = "0.11"
prost-types = "0.11"
substreams = "0.5.0"
serde_json = "1.0"
substreams-database-change = "1.0.0"
substreams-entity-change = "1.0.0"
substreams-sink-kv = "0.1.1"
substreams-ethereum = "0.9.0"
substreams-solana = "0.2.0"

bs58 = "0.4.0"
chrono = { version = "0.4", features = [ "std" ], default-features = false }

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
