[package]
name = "substreams-sa"
version = "0.0.2"
description = "Substream mapping for SA-GM"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
prost = "0.11"
prost-types = "0.11"
substreams = "0.5.0"
serde_json = "1.0"
substreams-database-change = "1.0.0"
substreams-solana = "0.2.0"
borsh = "0.10.2"
base64 = "0.21.0"
hex = "0.4.3"
bs58 = "0.4.0"
chrono = { version = "0.4", features = ["std"], default-features = false }
bigdecimal = "0.3.0"
#sol-chainsaw = "0.0.2"
marketplace_interface = { path = "../libs/staratlas_gm/marketplace_interface" }




[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
