[package]
name = "worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
env_logger = "0.9.1"
log = "0.4.17"
anyhow = "1.0.65"
tokio = { version = "1", features = ["full"] }
indicatif = "0.17.1"
console = "0.15.2"
solana_tools = { path = "../libs/solana_tools" }
staratlas = { path = "../libs/staratlas" }
mongo = { path = "../libs/mongo" }
