[package]
name = "database_psql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.3", features = ["postgres", "r2d2"] }
r2d2 = "0.8.9"

serde = { version = "1.0", features = ["derive"] }