[package]
name = "database_psql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "chrono"] }

serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.24", features = ["serde"] }
utoipa = "3.1.1"
#utoipa = { path = "../utopia_temp/utoipa" }

r2d2 = "0.8.10"
deadpool-postgres = "0.10.5"
tokio-postgres = "0.7.7"
assert-json-diff = "2.0.2"
serde_json = "1.0.94"
