[package]
name = "metadata_gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.3"
chrono = "0.4.22"
envy = "0.4.2"
mpl-token-metadata = "1.4.3"
serde = "1.0.147"
serde_json = "1.0.87"
solana-account-decoder = "1.14.7"
solana-client = "1.15.2"
solana-sdk = "1.14.7"
spl-associated-token-account = "1.1.1"
spl-token = "3.5.0"
url = { version = "2.3.1", features = ["serde"] }
nft-metadata = "1.1.0"
tokio = "1.26.0"