[package]
name = "mongo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.3.0"
types = { path = "../types" }
futures = "0.3.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"