[package]
name = "solana_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.1"
log = "0.4.17"
types = { path = "../types" }
helper = { path = "../helper" }
staratlas = { path = "../staratlas" }
solana-sdk = "1.14.3"
solana-client = "1.14.3"
solana-program = "1.14.3"
solana-transaction-status = "1.14.3"
serde_json = "1.0"
assert-json-diff = "2.0.2"