[package]
name = "staratlas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
reqwest = { version = "0.11.0", features = ["json"] }
tokio = { version = "1", features = ["full"] }
helper = { path = "../helper" }
strum = "0.24"
strum_macros = "0.24"
log = "0.4"