[package]
name = "staratlas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
reqwest = { version = "0.11.0", features = ["json"] }
tokio = { version = "1", features = ["full"] }
helper = { path = "../helper" }

log = "0.4"
staratlas_nft = { path = "../staratlas_nft" }
staratlas_symbols = { path = "../staratlas_symbols" }