[package]
name = "staratlas_nft"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
log = "0.4"
strum = "0.24"
strum_macros = "0.24"